This file contains a high-level description of this package's evolution.
Entries are in reverse chronological order (most recent first).

VERSION         COMMENTS
-------         --------
4.1.3-rc1	2011-05-06

		 Stop looking for xdr if --disable-dap is used.

		 Don't try to run (some) fortran configure tests on
		 machines with no fortran.

4.1.3-beta1	2011-04-29

		 Fixed szlib not linking bug.

		 Fixed dreaded "nofill bug", lurking in netCDF classic
		 since at least 1999.  Writing more than a disk
		 block's worth of data that crossed disk block
		 boundaries more than a disk block beyond the end of
		 file in nofill mode could zero out recently written
		 earlier data that hadn't yet been flushed to disk.

		 Changed setting for H5Pset_libver_bounds to ensure
		 that all netCDF-4 files can be read by HDF5 1.8.x.

		 Merged libncdap3 and libncdap4 into new libdap2 library.
                 The suffix dap2 now refers to the dap protocol. This is
                 in prep for adding dap4 protocol support.

		 Took out --with-hdf5 and related options due to high
		 cost of maintaining this non-standard way of finding
		 libraries.

4.1.2          2011-03-29

	        Changes in build system to support building dlls on
	        cygwin/mingw32.

		Changes to fix portability problems and get things
		running on all test platforms.

		Some minor documentation fixes.

		Fixed opendap performance bug for nc_get_vars; required
                adding nc_get_var{s,m} to the dispatch table.

	        Now check for libz in configure.ac.

	        Fixed some bugs and some performance problems with
	        default chunksizes.

4.1.2-beta2    2011-01-11

	        Add "-c" option to nccopy to specify chunk sizes used
		in output in terms of list of dimension names.

	        Rewrite netCDF-4 attribute put code for a large
		speedup when writing lots of attributes.

		Fix nc-config --libs when static dependent libraries
		are not installed in the same directory as netCDF