@@ -10,6 +10,9 @@ VERSION         COMMENTS
 		 Don't try to run (some) fortran configure tests on
 		 machines with no fortran.
 
+		 Allow nccopy to rechunk with chunksizes larger than
+		 current dimension lengths.
+
 4.1.3-beta1	2011-04-29
 
 		 Fixed szlib not linking bug.
